--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,13 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = []
 
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-cov",
+    "flake8",
+]
+
 [project.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
 
@@ -15,3 +22,22 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["gendiff"]
+
+[tool.flake8]
+max-line-length = 100
+extend-ignore = "E203, W503"
+exclude = [".git", "__pycache__", ".venv", "build", "dist"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+#addopts = "--cov=gendiff --cov-report=term-missing"
+
+#[tool.coverage.run]
+#source = ["gendiff"]
+#omit = ["*/tests/*", "*/test_*"]
+
+[dependency-groups]
+dev = [
+    "autopep8>=2.0.0",
+    "pytest-cov>=5.0.0",
+]
