--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ build-backend = "hatchling.build"
 packages = ["gendiff"]
 
 [tool.flake8]
-max-line-length = 100
+max-line-length = 100  # Обновляем эту строку
 extend-ignore = "E203, W503"
 exclude = [".git", "__pycache__", ".venv", "build", "dist"]
 
@@ -43,3 +43,4 @@ dev = [
     "autopep8>=2.0.0",
     "pytest-cov>=5.0.0",
 ]
+
